--- a/IOTHubWeb/Views/Nodes/Index.cshtml
+++ b/IOTHubWeb/Views/Nodes/Index.cshtml
@@ -82,7 +82,7 @@
     }
 
 </table>
-
+<hr />
 <style>
     #map {
         height: 400px;
@@ -104,8 +104,8 @@
             position: latLng,
             map: map,
              title: '@Model.FirstOrDefault().Name',
-             //icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png',
-             label: { color: '#000000', background: '', fontWeight: 'bold', fontSize: '14px', text: '@Model.FirstOrDefault().Name' },
+             icon: 'https://github.com/VDSnuff/IOTHub/blob/master/IOTHubWeb/App_Data/triangle_64.png?raw=true',
+             label: { color: '#ED1C24', fontWeight: 'bold', fontSize: '14px', text: '@Model.FirstOrDefault().Name' },
         });
     }
 </script>
