--- a/IOTHubWeb/Views/Cars/Index.cshtml
+++ b/IOTHubWeb/Views/Cars/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IOTHub.Models.Car>
+﻿@model IEnumerable<IOTHub.ViewModels.CarsViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.OwnerId)
+            @Html.DisplayNameFor(model => model.UserName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.LicensePlateNumber)
@@ -32,7 +32,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.OwnerId)
+            @Html.DisplayFor(modelItem => item.UserName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.LicensePlateNumber)
