--- a/IOTHubWeb/Views/Home/Index.cshtml
+++ b/IOTHubWeb/Views/Home/Index.cshtml
@@ -1,31 +1,37 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<IOTHub.Models.Node>
+
+@{
+    ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<style>
+    #map {
+        height: 850px;
+        width: 100%;
+    }
+</style>
+<div id="map"></div>
+<script>
+    var latLng = { lat: @Model.FirstOrDefault().Latitude, lng: @Model.FirstOrDefault().Longitude };
+    var map;
+    var marker;
+    var nodeListJS;
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            center:latLng,
+            zoom: 18
+        });
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+        dotListJS = @Html.Raw(Json.Encode(Model));
+        dotListJS.forEach(function (element) {
+            marker = new google.maps.Marker({
+                position: { lat: element.Latitude, lng: element.Longitude },
+                map: map,
+                title: element.Name,
+                icon: 'https://github.com/VDSnuff/IOTHub/blob/master/IOTHubWeb/App_Data/triangle_64.png?raw=true',
+                label: { color: '#ED1C24', fontWeight: 'bold', fontSize: '14px', text: element.Name },
+            });
+        });
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEi9L_6xG0THDSXMx0rZZnIqlL0cvtkZg&callback=initMap" async defer></script>
