--- a/IOTHubWeb/Content/Site.css
+++ b/IOTHubWeb/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #3e3e42;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,64 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+
+/*test*/
+.sidenav {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #2D2D30;
+    overflow-x: hidden;
+    padding-top: 5%;
+}
+
+    .sidenav a {
+        padding: 6px 6px 6px 32px;
+        text-decoration: none;
+        font-size: 1.5em;
+        color: #818181;
+        display: block;
+    }
+
+        .sidenav a:hover {
+            color: #f1f1f1;
+        }
+
+.main {
+    margin-left: 200px; /* Same as the width of the sidenav */
+}
+
+.right {
+    position: absolute;
+    right: 80px;
+}
+
+.navbar-inverse {
+    background-color: #3E3E42;
+    border-color: #3E3E42;
+}
+
+    /*.navbar-inverse .navbar-nav > li > a {
+        color: #686868;
+    }*/
+
+.footer {
+    background-color: #3e3e42;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+        .sidenav a {
+            font-size: 18px;
+        }
 }
