--- a/IOTHubWeb/Views/Shared/_Layout.cshtml
+++ b/IOTHubWeb/Views/Shared/_Layout.cshtml
@@ -3,41 +3,33 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - IOTHub</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Nodes", "Index", "Nodes")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+                <div class="right">
+                    @Html.Partial("_LoginPartial")
+                </div>
+                <div class="sidenav">
+                    <div>@Html.ActionLink("IOTHub", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</div>
+                    <ul class="nav navbar-nav">
+                        <li><div>@Html.ActionLink("About", "About", "Home")</div></li>
+                        <li><div>@Html.ActionLink("Contact", "Contact", "Home")</div></li>
+                        <li><div>@Html.ActionLink("Nodes", "Index", "Nodes")</div></li>
+                        <li><div>@Html.ActionLink("Cars", "Index", "Cars")</div></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
+    @RenderBody()
+    <footer class="footer">
+        <div><p>IOTHub Application - @DateTime.Now.Year</p></div>
+    </footer>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
