--- a/IOTHubWeb/Content/Site.css
+++ b/IOTHubWeb/Content/Site.css
@@ -39,15 +39,15 @@ textarea {
 }
 
     .sidenav a {
-        padding: 6px 6px 6px 32px;
+        padding: 16px 16px 16px 32px;
         text-decoration: none;
         font-size: 1.5em;
-        color: #818181;
+        color: #f1f1f1;
         display: block;
     }
 
         .sidenav a:hover {
-            color: #f1f1f1;
+            color: #9d9d9d;
         }
 
 .main {
@@ -64,14 +64,32 @@ textarea {
     border-color: #3E3E42;
 }
 
-    /*.navbar-inverse .navbar-nav > li > a {
-        color: #686868;
-    }*/
 
 .footer {
-    background-color: #3e3e42;
+    color: #9d9d9d;
     width: 100%;
     height: 100%;
+    padding-top: 15px;
+}
+
+    .footer a {
+        color: #9d9d9d;
+    }
+
+        .footer a:hover {
+            color: #f1f1f1;
+            text-decoration: none;
+        }
+
+.logo {
+    margin-left: 33px;
+    margin-top: -90px;
+    margin-bottom: 120px;
+    font-size: 1.2em;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #f1f1f1;
 }
 
 @media screen and (max-height: 450px) {
