--- a/IOTHubWeb/Content/Site.css
+++ b/IOTHubWeb/Content/Site.css
@@ -39,7 +39,7 @@ textarea {
 }
 
     .sidenav a {
-        padding: 16px 16px 16px 32px;
+        padding: 16px 16px 16px 62px;
         text-decoration: none;
         font-size: 1.5em;
         color: #f1f1f1;
@@ -83,9 +83,15 @@ textarea {
 
 .logo {
     margin-left: 33px;
-    margin-top: -90px;
-    margin-bottom: 120px;
-    font-size: 1.2em;
+    margin-top: 65%;
+    margin-bottom: 0px;
+
+}
+
+.logoName {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-top: 85%;
 }
 
 .navbar-inverse .navbar-brand {
