--- a/IOTHubWeb/Views/Shared/_Layout.cshtml
+++ b/IOTHubWeb/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                 </div>
                 
                 <div class="sidenav">
+                    <div class="logoName">@Html.ActionLink("IOT Hub", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</div>
                     <div class="logo">
-                        <div>@Html.ActionLink("IOT Hub", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</div>
-                        <img style="padding-top: 10px" src="~/Img/IOTHub.png">
+                        <img style="padding-top: 10px; width: 120px; height: 120px;" src="~/Img/IOTHub.png">
                     </div>
-                    <ul class="nav navbar-nav">
+                    <ul id="leftNav" class="nav navbar-nav">
                         <li><div>@Html.ActionLink("About", "About", "Home")</div></li>
                         <li><div>@Html.ActionLink("Contact", "Contact", "Home")</div></li>
                         <li><div>@Html.ActionLink("Nodes", "Index", "Nodes")</div></li>
